--- a/w1Consultorio/Views/Atendimento/Edit.cshtml
+++ b/w1Consultorio/Views/Atendimento/Edit.cshtml
@@ -13,7 +13,6 @@
 
     <fieldset>
         @Html.HiddenFor(model => model.codAtendimento)
-        <legend>Atendimento</legend>
 
         <div class="panel panel-default">
             <div class="panel-body">
@@ -31,7 +30,7 @@
                     <div class="row form-group">
                         <div class="display-label">
                             <label class="col-sm-2 control-label">
-                                @Html.LabelFor(model => model.Funcionario.Nome) @Html.DisplayFor(model => model.codFuncionario)
+                                @Html.LabelFor(model => model.Funcionario.Nome) 
                             </label>
                         </div>
                     
