--- a/w1Consultorio/Views/Pergunta/Details.cshtml
+++ b/w1Consultorio/Views/Pergunta/Details.cshtml
@@ -10,6 +10,30 @@
     <div class="panel panel-default">
         <div class="panel-body">
             <form class="form-horizontal" role="form">
+                <div class="form-group">
+                    <div class="display-label">
+                        <label class="col-sm-2 text-info">@Html.DisplayNameFor(model => model.CodPergunta)</label>
+                    </div>
+                    <div class="col-sm-10">
+                        <label class="control-label">@Html.DisplayFor(model => model.CodPergunta)</label>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="display-label">
+                        <label class="col-sm-2 text-info">@Html.DisplayNameFor(model => model.CodPerguntaGrupo)</label>
+                    </div>
+                    <div class="col-sm-10">
+                        <label class="control-label">@Html.DisplayFor(model => model.CodPerguntaGrupo)</label>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="display-label">
+                        <label class="col-sm-2 text-info">@Html.DisplayNameFor(model => model.CodTipoResposta)</label>
+                    </div>
+                    <div class="col-sm-10">
+                        <label class="control-label">@Html.DisplayFor(model => model.CodTipoResposta)</label>
+                    </div>
+                </div>
             <div class="form-group">
                 <div class="display-label">
                     <label class="col-sm-2 text-info">@Html.DisplayNameFor(model => model.Descricao)</label>
@@ -34,6 +58,15 @@
                     <label class="control-label">@Html.DisplayFor(model => model.AtivoDescricao)</label>
                 </div>
             </div>
+
+                <div class="form-group">
+                    <div class="display-label">
+                        <label class="col-sm-2 text-info">@Html.DisplayNameFor(model => model.CodTipoResposta)</label>
+                    </div>
+                    <div class="col-sm-10">
+                        <label class="control-label">@Html.DisplayFor(model => model.CodTipoResposta)</label>
+                    </div>
+                </div>
         </form>
         </div>
     </div>
