--- a/w1Consultorio/Views/Shared/_Layout.cshtml
+++ b/w1Consultorio/Views/Shared/_Layout.cshtml
@@ -63,7 +63,7 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Atendimento <b class="caret"></b></a>
                 <ul class="dropdown-menu">
                     <li>@Html.ActionLink("Realizar Atendimento", "", "Atendimento")</li>
-
+                    <li>@Html.ActionLink("Prontuários", "", "Prontuario")</li>
                 </ul>
             </li>
         </ul>
